[metadata]
name = flizard
version = attr: flizard.__version__
author = L. F. Pereira
author_email = luisfgpereira95@gmail.com
description = Utils to solve small tasks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lpereira95/flizard
project_urls =
	Bug Tracker = https://github.com/lpereira95/flizard/issues
classifiers =
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
	License :: OSI Approved :: MIT License

[options]
package_dir =
	= src
packages = find:
python_requires = >= 3.7
install_requires =
    lizard

[options.packages.find]
where = src

